Fix: IncorrectResultSizeDataAccessException in restaurant search