@@ -8,19 +8,18 @@ import com.querydsl.jpa.JPAExpressions;
 import com.querydsl.jpa.impl.JPAQueryFactory;
 import com.toktot.domain.restaurant.Restaurant;
 import com.toktot.domain.restaurant.dto.response.RestaurantInfoResponse;
-import com.toktot.domain.restaurant.service.RestaurantStatisticsService;
-import com.toktot.domain.review.QTooltip;
 import com.toktot.domain.review.type.KeywordType;
 import com.toktot.domain.review.type.TooltipType;
 import com.toktot.web.dto.request.SearchCriteria;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.support.PageableExecutionUtils;
 import org.springframework.stereotype.Repository;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -32,64 +31,58 @@ import static com.toktot.domain.review.QReviewImage.reviewImage;
 import static com.toktot.domain.review.QReviewKeyword.reviewKeyword;
 import static com.toktot.domain.review.QTooltip.tooltip;
 
-@Slf4j
 @Repository
 @RequiredArgsConstructor
 public class RestaurantSearchRepositoryImpl implements RestaurantSearchRepository {
 
     private final JPAQueryFactory queryFactory;
-    private final RestaurantStatisticsService restaurantStatisticsService;
 
     @Override
-    public Page<RestaurantInfoResponse> searchRestaurantsWithFilters(SearchCriteria criteria,
-                                                                     Long currentUserId,
-                                                                     List<Long> blockedUserIds,
-                                                                     Pageable pageable) {
-
-        BooleanBuilder reviewFilterBuilder = buildReviewFilterConditions(criteria, blockedUserIds);
-
-        List<Long> restaurantIds = queryFactory
-                .select(restaurant.id).distinct()
-                .from(review)
-                .join(review.restaurant, restaurant)
-                .where(reviewFilterBuilder)
-                .fetch();
-
-        if (restaurantIds.isEmpty()) {
-            return Page.empty(pageable);
-        }
-
-        BooleanBuilder restaurantBuilder = new BooleanBuilder();
-        restaurantBuilder.and(restaurant.id.in(restaurantIds))
-                .and(restaurant.isActive.isTrue());
-
-        if (criteria.hasLocationFilter()) {
-            restaurantBuilder.and(buildDistanceExpression(criteria).loe(criteria.radius().doubleValue()));
-        }
-
-        OrderSpecifier<?>[] orderSpecifiers = buildRestaurantOrderSpecifiers(criteria);
+    public Page<RestaurantInfoResponse> searchRestaurantsWithFilters(
+            SearchCriteria criteria,
+            Long currentUserId,
+            List<Long> blockedUserIds,
+            Pageable pageable) {
 
         List<Restaurant> restaurants = queryFactory
                 .selectFrom(restaurant)
-                .where(restaurantBuilder)
-                .orderBy(orderSpecifiers)
+                .where(
+                        restaurant.isActive.isTrue()
+                                .and(
+                                        JPAExpressions
+                                                .selectOne()
+                                                .from(review)
+                                                .where(review.restaurant.id.eq(restaurant.id)
+                                                        .and(buildReviewFilterConditions(criteria, blockedUserIds)))
+                                                .exists()
+                                )
+                )
+                .orderBy(buildRestaurantOrderSpecifiers(criteria))
                 .offset(pageable.getOffset())
                 .limit(pageable.getPageSize())
                 .fetch();
 
-        Long total = queryFactory
+        Long totalCount = queryFactory
                 .select(restaurant.count())
                 .from(restaurant)
-                .where(restaurantBuilder)
+                .where(
+                        restaurant.isActive.isTrue()
+                                .and(
+                                        JPAExpressions
+                                                .selectOne()
+                                                .from(review)
+                                                .where(review.restaurant.id.eq(restaurant.id)
+                                                        .and(buildReviewFilterConditions(criteria, blockedUserIds)))
+                                                .exists()
+                                )
+                )
                 .fetchOne();
 
-        return new PageImpl<>(
-                restaurants.stream()
-                        .map(r -> convertToRestaurantInfoResponse(r, criteria))
-                        .collect(Collectors.toList()),
-                pageable,
-                Objects.requireNonNullElse(total, 0L)
-        );
+        List<RestaurantInfoResponse> responseList = restaurants.stream()
+                .map(r -> convertToRestaurantInfoResponse(r, criteria))
+                .toList();
+
+        return PageableExecutionUtils.getPage(responseList, pageable, () -> totalCount != null ? totalCount : 0L);
     }
 
     @Override
@@ -145,7 +138,7 @@ public class RestaurantSearchRepositoryImpl implements RestaurantSearchRepositor
                         .map(r -> convertToRestaurantInfoResponse(r, criteria))
                         .collect(Collectors.toList()),
                 pageable,
-                total
+                Objects.requireNonNullElse(total, 0L)
         );
     }
 
@@ -198,7 +191,6 @@ public class RestaurantSearchRepositoryImpl implements RestaurantSearchRepositor
                                     .and(reviewKeyword.keywordType.eq(keywordType)))
                             .exists());
                 } catch (IllegalArgumentException e) {
-                    log.warn("Invalid keyword type: {}", keyword);
                     continue;
                 }
             }
@@ -209,29 +201,27 @@ public class RestaurantSearchRepositoryImpl implements RestaurantSearchRepositor
 
     private NumberExpression<Double> buildDistanceExpression(SearchCriteria criteria) {
         return Expressions.numberTemplate(Double.class,
-                "6371 * acos(cos(radians({0})) * cos(radians({1})) * cos(radians({2}) - radians({3})) + sin(radians({0})) * sin(radians({1})))",
-                criteria.latitude(),
-                restaurant.latitude,
-                restaurant.longitude,
-                criteria.longitude());
+                "6371 * acos(cos(radians({0})) * cos(radians(restaurant.latitude)) * cos(radians(restaurant.longitude) - radians({1})) + sin(radians({0})) * sin(radians(restaurant.latitude)))",
+                criteria.latitude(), criteria.longitude());
     }
 
     private OrderSpecifier<?>[] buildRestaurantOrderSpecifiers(SearchCriteria criteria) {
-        if (criteria.sort() != null) {
+        if (criteria.hasSortFilter()) {
             return switch (criteria.sort()) {
-                case DISTANCE -> criteria.hasLocationFilter() ?
-                        new OrderSpecifier[]{buildDistanceExpression(criteria).asc(), restaurant.createdAt.desc()} :
-                        new OrderSpecifier[]{restaurant.createdAt.desc()};
-                case RATING -> new OrderSpecifier[]{
-                        buildRestaurantAvgRatingExpression().desc().nullsLast(),
+                case DISTANCE -> new OrderSpecifier[]{
+                        buildDistanceExpression(criteria).asc(),
                         restaurant.createdAt.desc()
                 };
                 case POPULARITY -> new OrderSpecifier[]{
                         buildRestaurantPopularityExpression().desc(),
                         restaurant.createdAt.desc()
                 };
+                case RATING -> new OrderSpecifier[]{
+                        buildRestaurantAvgRatingExpression().desc(),
+                        restaurant.createdAt.desc()
+                };
                 case SATISFACTION -> new OrderSpecifier[]{
-                        buildRestaurantSatisfactionExpression().desc().nullsLast(),
+                        buildRestaurantSatisfactionExpression().desc(),
                         restaurant.createdAt.desc()
                 };
             };
@@ -253,11 +243,12 @@ public class RestaurantSearchRepositoryImpl implements RestaurantSearchRepositor
         return Expressions.numberTemplate(Double.class, "({0})",
                 JPAExpressions
                         .select(tooltip.rating.avg())
-                        .from(tooltip)
-                        .join(tooltip.reviewImage, reviewImage)
-                        .join(reviewImage.review, review)
+                        .from(review)
+                        .join(review.images, reviewImage)
+                        .join(reviewImage.tooltips, tooltip)
                         .where(review.restaurant.id.eq(restaurant.id)
-                                .and(tooltip.tooltipType.eq(TooltipType.FOOD)))
+                                .and(tooltip.tooltipType.eq(TooltipType.FOOD))
+                                .and(review.isHidden.isFalse()))
         );
     }
 
@@ -266,7 +257,8 @@ public class RestaurantSearchRepositoryImpl implements RestaurantSearchRepositor
                 JPAExpressions
                         .select(review.valueForMoneyScore.avg())
                         .from(review)
-                        .where(review.restaurant.id.eq(restaurant.id))
+                        .where(review.restaurant.id.eq(restaurant.id)
+                                .and(review.isHidden.isFalse()))
         );
     }
 
@@ -280,13 +272,56 @@ public class RestaurantSearchRepositoryImpl implements RestaurantSearchRepositor
             distance = distanceKm != null ? String.format("%.1fkm", distanceKm) : null;
         }
 
-        BigDecimal avgRating = restaurantStatisticsService.calculateAverageRating(restaurant.getId());
-        Long reviewCount = restaurantStatisticsService.calculateReviewCount(restaurant.getId());
-        Integer valueForMoneyPoint = restaurantStatisticsService.calculateValueForMoneyPoint(restaurant.getId());
-        String pricePercentile = restaurantStatisticsService.calculatePricePercentile(restaurant.getId());
+        Double avgRatingDouble = queryFactory
+                .select(tooltip.rating.avg())
+                .from(review)
+                .join(review.images, reviewImage)
+                .join(reviewImage.tooltips, tooltip)
+                .where(review.restaurant.id.eq(restaurant.getId())
+                        .and(tooltip.tooltipType.eq(TooltipType.FOOD))
+                        .and(review.isHidden.isFalse()))
+                .fetchOne();
 
-        return RestaurantInfoResponse.withStatsComplete(restaurant, null, avgRating,
-                reviewCount, distance, valueForMoneyPoint, pricePercentile);
+        BigDecimal avgRating = (avgRatingDouble != null) ?
+                BigDecimal.valueOf(avgRatingDouble).setScale(1, RoundingMode.HALF_UP) : BigDecimal.ZERO;
+
+        Long reviewCount = queryFactory
+                .select(review.count())
+                .from(review)
+                .where(review.restaurant.id.eq(restaurant.getId())
+                        .and(review.isHidden.isFalse()))
+                .fetchOne();
+
+        return RestaurantInfoResponse.builder()
+                .id(restaurant.getId())
+                .name(restaurant.getName())
+                .address(extractCityAndDistrict(restaurant.getAddress()))
+                .distance(distance)
+                .mainMenus(restaurant.getPopularMenus())
+                .averageRating(avgRating)
+                .reviewCount(reviewCount != null ? reviewCount : 0L)
+                .isGoodPriceStore(restaurant.getIsGoodPriceStore())
+                .isLocalStore(restaurant.getIsLocalStore())
+                .image(restaurant.getImage())
+                .point(null)
+                .percent(null)
+                .build();
+    }
+
+    private String extractCityAndDistrict(String fullAddress) {
+        if (fullAddress == null || fullAddress.trim().isEmpty()) {
+            return null;
+        }
+
+        String[] parts = fullAddress.replace("제주특별자치도", "")
+                .trim()
+                .split("\\s+");
+
+        if (parts.length < 2) {
+            return fullAddress;
+        }
+
+        return parts[0] + " " + parts[1];
     }
 
     private Double calculateDistance(Double lat1, Double lon1, BigDecimal lat2, BigDecimal lon2) {
